--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Static Site
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -18,3 +18,5 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
+          script: |
+            bash /home/azureuser/deploy.sh
